# Todo-App

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  RENDER-DEPLOYMENT.md  VERCEL-ONLY-DEPLOYMENT.md  pyproject.toml  test_functionality.py  test_improved_ui.py
.specify/memory/: constitution.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/todo/: TaskFilters.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/hooks/: useTaskManager.ts
frontend/tests/: task-form.test.tsx
history/prompts/todo-cli-app/: 1-break-down-impl-tasks.tasks.prompt.md  (+3 more)
specs/1-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-todo-backend-service/: plan.md  spec.md  tasks.md
src/: main.py
src/models/: task.py  task_list.py
src/services/: task_service.py
todo-backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.py
todo-backend/app/: config.py  database.py  main.py
todo-backend/app/api/: deps.py
todo-backend/app/api/v1/: tasks.py
todo-backend/app/models/: base.py  task.py
todo-backend/app/schemas/: base.py  error.py  task.py
todo-backend/app/services/: task_service.py
todo-backend/app/utils/: exceptions.py
todo-backend/migrations/: env.py
todo-backend/migrations/versions/: 0001_initial_tasks_table.py
todo-backend/tests/: conftest.py  test_tasks.py
(+14 files in other folders)
